--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,13 +3,15 @@
     ## https://github.com/docker-library/ruby/issues/45
     LANG: C.UTF-8
   bundle_cache:
-    folder: /usr/local/bundle
+    folder: vendor/bundle
     fingerprint_script:
       - echo $CIRRUS_TASK_NAME:$CIRRUS_OS
       - ruby -v
       - cat Gemfile
-      - cat **/*.gemspec
-    populate_script: bundle update
+      - cat *.gemspec
+  install_script:
+    - bundle config set --local path 'vendor/bundle'
+    - bundle update
 
 remark_task:
   container:
@@ -40,4 +42,4 @@ test_task:
       image: ruby:2.6
       image: ruby:2.7
       image: ruby:3.0
-  test_script: bundle exec rake
+  test_script: bundle exec rspec
