--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,8 @@ Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 Layout/MultilineOperationIndentation:
   EnforcedStyle: indented
+Layout/LineEndStringConcatenationIndentation:
+  EnforcedStyle: indented
 Layout/ArgumentAlignment:
   EnforcedStyle: with_fixed_indentation
 Layout/ParameterAlignment:
